crates/ruff_python_parser/tests/snapshots/invalid_syntax@match_expected_colon.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/match_expected_colon.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..29,
        body: Suite {
            range: 0..29,
            node_index: NodeIndex(None),
            statements: [
                Match(
                    StmtMatch {
                        node_index: NodeIndex(None),
                        range: 0..28,
                        subject: List(
                            ExprList {
                                node_index: NodeIndex(None),
                                range: 6..12,
                                elts: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 7..8,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 10..11,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                            },
                        ),
                        cases: [
                            MatchCase {
                                range: 17..28,
                                node_index: NodeIndex(None),
                                pattern: MatchAs(
                                    PatternMatchAs {
                                        node_index: NodeIndex(None),
                                        range: 22..23,
                                        pattern: None,
                                        name: None,
                                    },
                                ),
                                guard: None,
                                body: Suite {
                                    range: 25..28,
                                    node_index: NodeIndex(None),
                                    statements: [
                                        Expr(
                                            StmtExpr {
                                                node_index: NodeIndex(None),
                                                range: 25..28,
                                                value: EllipsisLiteral(
                                                    ExprEllipsisLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 25..28,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            },
                        ],
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | match [1, 2]
  |             ^ Syntax Error: Expected `:`, found newline
2 |     case _: ...
  |
