crates/ruff_python_parser/tests/snapshots/invalid_syntax@match_stmt_expect_indented_block.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/match_stmt_expect_indented_block.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..23,
        body: Suite {
            range: 0..23,
            node_index: NodeIndex(None),
            statements: [
                Match(
                    StmtMatch {
                        node_index: NodeIndex(None),
                        range: 0..22,
                        subject: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 6..9,
                                id: Name("foo"),
                                ctx: Load,
                            },
                        ),
                        cases: [
                            MatchCase {
                                range: 11..22,
                                node_index: NodeIndex(None),
                                pattern: MatchAs(
                                    PatternMatchAs {
                                        node_index: NodeIndex(None),
                                        range: 16..17,
                                        pattern: None,
                                        name: None,
                                    },
                                ),
                                guard: None,
                                body: Suite {
                                    range: 19..22,
                                    node_index: NodeIndex(None),
                                    statements: [
                                        Expr(
                                            StmtExpr {
                                                node_index: NodeIndex(None),
                                                range: 19..22,
                                                value: EllipsisLiteral(
                                                    ExprEllipsisLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 19..22,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            },
                        ],
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | match foo:
2 | case _: ...
  | ^^^^ Syntax Error: Expected an indented block after `match` statement
  |


  |
1 | match foo:
2 | case _: ...
  |            ^ Syntax Error: Expected dedent, found end of file
  |
