crates/ruff_python_parser/tests/snapshots/invalid_syntax@match_stmt_invalid_subject_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/match_stmt_invalid_subject_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..131,
        body: Suite {
            range: 0..131,
            node_index: NodeIndex(None),
            statements: [
                Match(
                    StmtMatch {
                        node_index: NodeIndex(None),
                        range: 0..27,
                        subject: Starred(
                            ExprStarred {
                                node_index: NodeIndex(None),
                                range: 7..9,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 8..9,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                        cases: [
                            MatchCase {
                                range: 16..27,
                                node_index: NodeIndex(None),
                                pattern: MatchAs(
                                    PatternMatchAs {
                                        node_index: NodeIndex(None),
                                        range: 21..22,
                                        pattern: None,
                                        name: None,
                                    },
                                ),
                                guard: None,
                                body: Suite {
                                    range: 24..27,
                                    node_index: NodeIndex(None),
                                    statements: [
                                        Expr(
                                            StmtExpr {
                                                node_index: NodeIndex(None),
                                                range: 24..27,
                                                value: EllipsisLiteral(
                                                    ExprEllipsisLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 24..27,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            },
                        ],
                    },
                ),
                Match(
                    StmtMatch {
                        node_index: NodeIndex(None),
                        range: 65..99,
                        subject: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 71..82,
                                elts: [
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 71..79,
                                            value: BoolOp(
                                                ExprBoolOp {
                                                    node_index: NodeIndex(None),
                                                    range: 72..79,
                                                    op: And,
                                                    values: [
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 72..73,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 78..79,
                                                                id: Name("y"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ],
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 81..82,
                                            id: Name("z"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                        cases: [
                            MatchCase {
                                range: 88..99,
                                node_index: NodeIndex(None),
                                pattern: MatchAs(
                                    PatternMatchAs {
                                        node_index: NodeIndex(None),
                                        range: 93..94,
                                        pattern: None,
                                        name: None,
                                    },
                                ),
                                guard: None,
                                body: Suite {
                                    range: 96..99,
                                    node_index: NodeIndex(None),
                                    statements: [
                                        Expr(
                                            StmtExpr {
                                                node_index: NodeIndex(None),
                                                range: 96..99,
                                                value: EllipsisLiteral(
                                                    ExprEllipsisLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 96..99,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            },
                        ],
                    },
                ),
                Match(
                    StmtMatch {
                        node_index: NodeIndex(None),
                        range: 100..130,
                        subject: Yield(
                            ExprYield {
                                node_index: NodeIndex(None),
                                range: 106..113,
                                value: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 112..113,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ),
                        cases: [
                            MatchCase {
                                range: 119..130,
                                node_index: NodeIndex(None),
                                pattern: MatchAs(
                                    PatternMatchAs {
                                        node_index: NodeIndex(None),
                                        range: 124..125,
                                        pattern: None,
                                        name: None,
                                    },
                                ),
                                guard: None,
                                body: Suite {
                                    range: 127..130,
                                    node_index: NodeIndex(None),
                                    statements: [
                                        Expr(
                                            StmtExpr {
                                                node_index: NodeIndex(None),
                                                range: 127..130,
                                                value: EllipsisLiteral(
                                                    ExprEllipsisLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 127..130,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            },
                        ],
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | match (*x):
  |        ^^ Syntax Error: Starred expression cannot be used here
2 |     case _: ...
3 | # Starred expression precedence test
  |


  |
2 |     case _: ...
3 | # Starred expression precedence test
4 | match *x and y, z:
  |        ^^^^^^^ Syntax Error: Boolean expression cannot be used here
5 |     case _: ...
6 | match yield x:
  |


  |
4 | match *x and y, z:
5 |     case _: ...
6 | match yield x:
  |       ^^^^^^^ Syntax Error: Yield expression cannot be used here
7 |     case _: ...
  |
